--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="elements.html">Elements</a></li>
-			<li><a href="generic.html">Ejemplo</a></li>
+			<li><a href="#">Elements</a></li>
+			<li><a href="./ejemplo.html">Ejemplo</a></li>
 		</ul>
 	</nav>
 
@@ -37,8 +37,8 @@
 	<section id="banner">
 		<div class="inner">
 			<h1>DESARROLLO WEB</h1>
-			<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+			<p>Diseño responsivo con video incluido<br />
+					diseñado por <a href="https://templated.co/">TEMPLATED</a> tiene licencia de creacion.</p>
 		</div>
 		<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 	</section>
@@ -47,7 +47,7 @@
 	<section class="wrapper">
 		<div class="inner">
 			<header class="special">
-				<h2>Sem turpis amet semper</h2>
+				<h2>Hecho Por Carlota Menendez Álvarez</h2>
 				<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
 			</header>
 			<div class="highlights">
