--- a/articulo.html
+++ b/articulo.html
@@ -35,7 +35,7 @@
 
 	<!-- Heading -->
 	<div id="heading">
-		<h1>Página de Ejemplo de Desarrollo de Aplicaciones WEB</h1>
+		<h1>Página de Ejemplo de Desarrollo de Aplicaciones WEB(Version Saúl)</h1>
 	</div>
 
 	<!-- Main -->
